# isekaitavern

./: .env.example  .envrc  .gitignore  README.md  config.toml  main.py  pyproject.toml
isekaitavern/: bot.py  enums.py  types.py
isekaitavern/cogs/: music.py
isekaitavern/cogs/anonymous/: cog.py  core.py  model.py  repository.py  services.py
isekaitavern/cogs/debug/: cog.py
isekaitavern/cogs/echo/: cog.py
isekaitavern/cogs/greeting/: cog.py
isekaitavern/cogs/guild/: cog.py
isekaitavern/cogs/music/: __init__.py  cog.py  core.py  model.py
isekaitavern/cogs/reminder/: cog.py  model.py  repository.py  services.py  view.py
isekaitavern/cogs/test/: cog.py
isekaitavern/cogs/ticket/: cog.py  model.py  repository.py  services.py  views.py
isekaitavern/cogs/welcome_farewell/: __init__.py  cog.py  core.py  model.py  repository.py  schemes.py  service.py
isekaitavern/config/: __init__.py  ffmpeg.py  general.py  redis.py  services.py  settings.py  youtube.py
isekaitavern/core/: formatter.py  repository.py
isekaitavern/errno/: __init__.py  basic.py  general.py
isekaitavern/i18n/: __init__.py  i18n.py  zh-tw.json
isekaitavern/services/: repository.py
isekaitavern/utils/: context_helper.py  download.py  extensions.py  helpers.py  logging.py  redis.py  tool.py  url.py  validators.py
