[project]
name = "isekaitavern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyNaCl",
    "aiohttp",
    "beanie",
    "dacite",
    "discord.py",
    "dotenv",
    "pydantic",
    "redis",
    "yt-dlp",
]

[tool.ruff.lint]
ignore = ["PIE796"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["PLC0414"]

